# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./categories";
 export * from "./templates";
+export * from "./knowledge";
